<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chartboost Integration</string>
    <string name="appId">4f7b433509b6025804000002</string>
    <string name="appSignature">dd2d41b69ac01b80f443f5b6cf06096d457f82bd</string>
    <string name="appId_kids_content">5ed62a9d7c777909102df5ca</string>
    <string name="appSignature_kids_content">64b18724eaf538d72f2c0d72c3ff0b21eebae7b0</string>
    <string name="InterstitialsButton">Interstitials</string>
    <string name="RewardedVideoButton">Rewarded Video</string>
    <string name="moreApps">More Apps</string>
    <string name="InPlayButton">In Play</string>
    <string name="BannerButton">Banner</string>
    <string name="location">Location</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="cache">Cache</string>
    <string name="show">Show</string>
    <string name="clear">Clear</string>
    <string name="location_label">Location:</string>
    <string name="has">Has :</string>
    <string name="_0">0</string>
    <string name="display">Display:</string>
    <string name="fail_click">Fail Click:</string>
    <string name="reward">Reward:</string>
    <string name="fail_display">Fail display:</string>
    <string name="fail_load">Fail Load:</string>
    <string name="impression">Impression:</string>
    <string name="dismiss">Dismiss:</string>
    <string name="cache_label">Cache:</string>
    <string name="click">Click:</string>
    <string name="new_app_id">App Id</string>
    <string name="new_app_signature">Signature</string>
    <string name="new_app_name">Name</string>
    <string name="add_app">Add a new app</string>
    <string name="dialog_restart_title">Are you sure to restart?</string>
    <string name="dialog_restart_msg">Changing app id and signature requires app restart.</string>
    <string name="dialog_restart_confirm">Confirm</string>
    <string name="dialog_restart_cancel">Cancel</string>
    <string name="disclosure_message">Your data will be used to deliver personalized ads to you.</string>
    <string name="ok">Ok</string>
    <!--Preference Key definitions-->
    <string name="key_enable_autocache">enableAutoCache</string>
    <string name="key_lock_orientation">lockOrientation</string>
    <string name="key_enable_video_prefetch">enableVideoPrefetch</string>
    <string name="key_request_interstitial_in_first_session">interstitialInFirstSession</string>
    <string name="key_app_id_selected">appIdSelected</string>
    <string name="key_app_signature_selected">appSignatureSelected</string>


</resources>
