<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/appId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_app_id"
        android:inputType="text" />

    <EditText
        android:id="@+id/signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_app_signature"
        android:inputType="text" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_app_name"
        android:inputType="text" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <Button
            android:id="@+id/dialog_add_app_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="@color/white"
            android:text="@string/dialog_restart_cancel"/>

        <Button
            android:id="@+id/dialog_add_app_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="@color/white"
            android:text="@string/dialog_restart_confirm"/>
    </LinearLayout>
</LinearLayout>